# Q4_AgenticAI

./: README.md
00_PythonSyntax/: 04_genericType_with_Callable&Dataclass.py  05_nested_Dataclass.py  06_alt_inheritance.py  07_inheritance_dataClasses.py  08_simple_VS_composition_Inheritance.py  basic_dataclass.py  basic_genericType.py  dataclass_VS_nonDataClass.py
01_UV/project_1/: main.py
01_UV/project_2/uv_project2/: pyproject.toml
01_UV/project_2/uv_project2/src/uv_project2/: __init__.py  main.py
02_OpenRouter/openRouter_Agents_SDK/: .env  main.py  pyproject.toml
03_Litellm/: .env  pyproject.toml
03_Litellm/01_litellm/: main.py
03_Litellm/02_litellm_project/project/: pyproject.toml
03_Litellm/02_litellm_project/project/src/project/: hello_llm.py
04_chainlit/hello_world/: .gitignore  chatbot.py  pyproject.toml
05_chatbot/: .gitgnore  main.py  pyproject.toml
06_streaming/streaming_in_chatbot/: .env  .gitignore  main.py  pyproject.toml
07_tools/hell_culator/: main.py  pyproject.toml
07_tools/multiple_tools/: .env  main.py  pyproject.toml
07_tools/single_tool/: main.py
07_tools/weather_agent/: main.py  pyproject.toml
08_agents_as_tools/language_translator_agent/: main.py  pyproject.toml
09_context/agent_or_llm_context/: main.py  pyproject.toml
09_context/local_context/: main.py  pyproject.toml
10_handoffs/basic_usage/: main.py  pyproject.toml
10_handoffs/via_function/: main.py  pyproject.toml
