[project]
name = "uv-project2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Amraha-Anwar", email = "amrahaanwar@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
uv-project2 = "uv_project2:main"
practice = "uv_project2.main:custom_file"       

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
